# oktsec

./: .dockerignore  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  install.sh  mkdocs.yml  oktsec.yaml.example
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pypi.yml  release.yml
DOCS/: README.md  linkedin-v0.8.md  next-steps-post-v0.8.md
DOCS/engineering/: next-steps-post-v0.8.md  quality-audit-2026-03-05.md  roadmap-v0.8-v1.0.md
DOCS/product/: quick-start.md  status-2026-02-24.md  status-2026-03-05.md
DOCS/strategy/: egress-control-plan.md  investor-brief.md  (+1 more)
documentation/: architecture.md  contributing.md  index.md  troubleshooting.md
guides/: docker-sandboxes.md
llm-rules/: llm-001.yaml  llm-002.yaml  llm-003.yaml  llm-004.yaml  llm-005.yaml  llm-006.yaml  llm-007.yaml  llm-008.yaml  llm-009.yaml  llm-010.yaml  llm-011.yaml  llm-013.yaml  llm-014.yaml  llm-015.yaml  llm-016.yaml
rules/: container-escape.yaml  default.yaml  embed.go  ipi-arena.yaml  memory-poisoning.yaml  openclaw.yaml  overeager.yaml  toolcall.yaml
sdk/: client.go  client_test.go  principal_test.go  safefile_unix.go  safefile_windows.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/oktsec/: __init__.py  client.py  models.py  signing.py
sdk/python/tests/: test_client.py  test_models.py  test_signing.py
(+456 files in other folders)
