[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oktsec"
version = "0.1.0"
description = "Python SDK for the oktsec security proxy — identity, policy, and content scanning for AI agent communication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "GARAGON" }]
keywords = ["mcp", "security", "ai-agents", "proxy", "ed25519"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/oktsec/oktsec"
Documentation = "https://github.com/oktsec/oktsec/tree/main/sdk/python"
Repository = "https://github.com/oktsec/oktsec"
Issues = "https://github.com/oktsec/oktsec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oktsec"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
